<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/sw_loss_smell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_fatigue" />

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/insert_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_title" />

    <TextView
        android:id="@+id/txt_loss_smell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/loss_smell"
        android:textColor="@color/symptoms"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/sw_loss_smell"
        app:layout_constraintTop_toBottomOf="@+id/txt_fatigue" />

    <TextView
        android:id="@+id/txt_fatigue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="116dp"
        android:text="@string/fatigue"
        android:textColor="@color/symptoms"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/sw_fatigue"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <TextView
        android:id="@+id/txt_loss_taste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/loss_taste"
        android:textColor="@color/symptoms"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/sw_loss_taste"
        app:layout_constraintTop_toBottomOf="@+id/txt_loss_smell" />

    <Switch
        android:id="@+id/sw_cough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_loss_smell"
        app:layout_constraintTop_toBottomOf="@+id/sw_temperature" />

    <TextView
        android:id="@+id/txt_cough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/cough"
        android:textColor="@color/symptoms"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/sw_cough"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_temperature" />

    <Switch
        android:id="@+id/sw_migraine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_loss_taste"
        app:layout_constraintTop_toBottomOf="@+id/sw_cough" />

    <TextView
        android:id="@+id/txt_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/temperature"
        android:textColor="@color/symptoms"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/sw_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <Switch
        android:id="@+id/sw_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:textOff="@string/OF"
        android:textOn="@string/ON"
        app:layout_constraintEnd_toStartOf="@+id/txt_fatigue"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <TextView
        android:id="@+id/txt_migraine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/migraine"
        android:textColor="@color/symptoms"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/sw_migraine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cough" />

    <Switch
        android:id="@+id/sw_fatigue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/symptoms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <Switch
        android:id="@+id/sw_loss_taste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/symptoms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_loss_smell" />

    <Button
        android:id="@+id/btn_send_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/send_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_migraine" />

    <Button
        android:id="@+id/btn_send_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/send_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_information" />

</androidx.constraintlayout.widget.ConstraintLayout>